Style scrollbar and few fixes

--- a/src/misc.scss
+++ b/src/misc.scss
@@ -1,3 +1,12 @@
+.link:hover, i:hover {
+    background: linear-gradient(to left, #13ADC7, #6978D1, #945DD6);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    filter: brightness(120%);
+    cursor: pointer;
+}
+
 .headline {
     font-size: 1.5rem;
 }
@@ -21,26 +30,48 @@
     }
 }
 
-a:hover, i:hover {
-    background: linear-gradient(to left, #13ADC7, #6978D1, #945DD6);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: brightness(120%);
-}
-
 .line {
     @include line(70%, 4px);
 }
 
-progress {
+progress, progress::-webkit-progress-bar {
     display: block;
-    background-color: #162950;
     border: none;
     border-radius: 83px;
+    background-color: #162950;
 }
 
-progress::-webkit-progress-value,
+progress::-webkit-progress-value
+ {
+    border-radius: 83px;
+    background: linear-gradient(to left, #13ADC7, #6978D1, #945DD6);
+}
+
 progress::-moz-progress-bar {
     border-radius: 83px;
     background: linear-gradient(to left, #13ADC7, #6978D1, #945DD6);
+}
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: white;
+
+    &::-webkit-scrollbar {
+        width: 2px;
+        height: 2px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: rgba(white, .5);
+        border-radius: 10px;
+        border: none;
+    }
+
+    ::-webkit-scrollbar-corner {
+        background: transparent;
+    }
 }
